static/client/components/Views/FilterTableView/_FilterTableView.scss
.p-filter-and-search-menu {
  .p-contextual-menu__toggle {
    display: flex;
    align-items: center;
  }

  .p-contextual-menu__dropdown {
    min-width: 35rem;
    margin-top: 0.3rem;
    background: var(--vf-suru-background);
    min-height: 20rem !important;
  }
}

.p-filter__body {
  .p-divider {
    grid-gap: 0;

    & .p-divider__block::before {
      left: 0;
    }
  }

  & .p-divider__block:not(:first-of-type) {
    padding-left: 0.8rem;
  }
}

.p-filter__button {
  width: 100%;
}

.p-filter__button--active {
  align-items: center;
  background: #e0e0e0;
  border: none;
  position: relative;
  cursor: pointer;
}

.p-filter__button--active::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 4px;
  background-color: black;
}

.p-filter__group {
  max-height: 16rem;
  overflow-y: auto;
  min-height: 16rem;
}

.filter-search {
  margin: 0.5rem;
}

.p-filter-panel__footer {
  display: flex;
  gap: 1.5rem;
  padding: 0 0.5rem 0.5rem;
}

